--- a/packages/stencil/src/index.html
+++ b/packages/stencil/src/index.html
@@ -9,6 +9,6 @@
     <script nomodule src="/build/stencil-test.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" middle="'Don't call me a framework'" last="JS"></my-component>
+    <sd-date-picker label="Select Date"></sd-date-picker>
   </body>
 </html>
